src/scss/drawerr.scss
@import "variables";

body.drawerr-no-scroll {
	height: 100%;
	overflow: hidden;
}

.drawerr {
	position: fixed;
	z-index:1;
	top:$drawerr-navbar-height;
	width:$drawerr-width;
	height:calc(100% - #{$drawerr-navbar-height});
	overflow-y:auto;
	overflow-x:hidden;
	transform:translateX($drawerr-translate);
	transition:all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
	background:$drawerr-bg;
	box-shadow:1px 0px $drawerr-shadow-depth 0px rgba(50, 50, 50, 0.75);

	/**
	 * Lists
	 */
	ul {
		margin:0;
		padding:0;
		list-style: none;
	}

	// Depth 1
	ul ul a  {
		padding-left:$drawerr-padding;
	}

	// Depth 2
	ul ul ul a  {
		padding-left:$drawerr-padding * 2;
	}

	// Depth 3
	ul ul ul ul a  {
		padding-left:$drawerr-padding * 3;
	}

	/**
	 * Menu items
	 */
	.section-title,
	a {
		display:flex;
		align-items: center;
		height: $drawerr-item-height;
		padding:$drawerr-padding-half 0 $drawerr-padding-half $drawerr-padding-half;
		border-bottom:1px solid $drawerr-item-border-bottom-color;
		text-decoration: none;
		color:$drawerr-text-color;
	}

	.section-title {
		font-weight:bold;
		letter-spacing: .07rem;
		text-transform: uppercase;
	}

	// Active
	.section-title.active,
	a.active {
		position: relative;
		color:$drawerr-item-active-color;
	}

	.active:last-child:before {
		content: " ";
		position: absolute;
		left:0;
		top:0;
		width:4px;
		height:$drawerr-item-height;
		background:$drawerr-item-active-before;
	}

	/**
	 * Scrollbars
	 */
	body {
		scrollbar-face-color: rgba(0, 0, 0, 0.07);
		scrollbar-track-color: rgba(0, 0, 0, 0.05);
	}

	&::-webkit-scrollbar {
		width: $drawerr-scrollbar;
		height: $drawerr-scrollbar;
	}

	&::-webkit-scrollbar-thumb {
		background: $drawerr-scrollbar-thumb;
		border-radius: 1em;
		cursor: grab;
	}

	&::-webkit-scrollbar-track {
		background: $drawerr-scrollbar-track-color;
	}
}

.drawerr--init {
	display:none;
}

.drawerr--open {
	transform:translateX(0px);
}

/**
 * Slide drawerr from the right side
 */
.drawerr-slide-from-right {
	transform:translateX($drawerr-translate-rtl);
}

.drawerr-slide-from-right.drawerr--open {
	transform:translateX( calc(100vw - #{$drawerr-width} ));
}

.drawerr-btn {
	display:flex;
	justify-content: space-between;
	flex-direction: column;
	align-self:center;
	width:$drawerr-hamburger-width;
	height:$drawerr-hamburger-height;
	padding:0;
	outline: none;

	span:not(.drawerr-btn__menu-text) {
		width:inherit;
		height:$drawerr-hamburger-bar-height;
		background:$drawerr-hamburger-bars-bg;
		transition: all 0.3s ease-in-out;
	}
}

.drawerr-btn__menu-text {
	font-size:.8rem;
}

.drawerr-btn--has-menu-text {
	height:$drawerr-hamburger-height * 2;
	align-self:flex-end;
}

.drawerr-btn--active {
	span {
		&:nth-child(1) {
			transform: translateY(5px) rotate(45deg);
		}

		&:nth-child(2) {
			opacity: 0;
		}

		&:nth-child(3) {
			transform: translateY(-12px) rotate(-45deg);
		}
	}
}

